--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,20 +25,6 @@ body {
     margin-bottom: 20px;
 }
 
-/* .info .inner-info h1:before {
-    content: "";
-    width: 100px;
-    height: 2px;
-    background-color: dodgerblue;
-    display: inline-block;
-    align-items: center;
-    justify-self: center;
-} */
-/* .info .inner-info h1:after {
-    content: "";
-    width: 100px;
-    height: 0px;
-    background-color: dodgerblue;
-    display: inline-block;
-    margin-right: 0px;
-} */
+.joke-container {
+    margin-top: 20px;
+}
