--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,11 @@ body {
 }
 
 .content .info{
-    background-color: #f5f5f5;
+    background-color: black;
     border: 1px solid #ddd;
     border-radius: 4px;
     height: 100vh;
-    background-color: #fff;
+    color: white;
 }
 
 .info .inner-info {
