--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,14 @@ body {
     font-size: 14px;
     line-height: 1.42857143;
     color: #333;
-    width: 90%;
+    width: 100%;
+    height: 100%;
+}
+
+@media (min-width: 768px) {
+    body {
+        width: 75%;
+    }
 }
 
 .content .info{
